packet-forwarder: update  Makefile
Signed-off-by: Anton Glukhov <anton.a.glukhov@gmail.com>

--- a/packet-forwarder/Makefile
+++ b/packet-forwarder/Makefile
@@ -37,3 +37,23 @@ define Package/packet-forwarder/description
   that forwards RF packets receive by the concentrator to a server through a
   IP/UDP link, and emits RF packets that are sent by the server.
 endef
+
+TARGET_CFLAGS += $(FPIC) -Iinc -std=c99 -I.
+TARGET_LGW_PATH = $(BUILD_DIR)/libloragw
+EXTRA_CFLAGS += -DLGW_PATH=$(BUILD_DIR)/libloragw
+
+PACKET_FORWARDER_MAKEOPTS= -C $(PKG_BUILD_DIR) \
+	LGW_PATH="$(PKG_BUILD_DIR)/libloragw"
+
+MAKE_FLAGS = GW_PATH="$(PKG_BUILD_DIR)/libloragw"
+
+define Package/packet_forwarder/install
+	$(INSTALL_DIR) $(1)/sbin
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/packet_forwarder/lora_pkt_fwd $(1)/usr/sbin/
+	$(INSTALL_DIR) $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/packaet_forwarder.init $(1)/etc/init.d/packet_porwarder
+	$(INSTALL_DIR) $(1)/etc
+	$(INSTALL_DATA) ./files/global_conf.json $(1)/etc/global_conf.json
+endef
+
+$(eval $(call BuildPackage,packet_forwarder))
