--- a/packet-forwarder/Makefile
+++ b/packet-forwarder/Makefile
@@ -16,7 +16,7 @@ PKG_SOURCE_URL:=https://github.com/Lora-net/packet_forwarder
 PKG_SOURCE_VERSION:=d0226eae6e7b6bbaec6117d0d2372bf17819c438
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_CAT:=zcat
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_CONFIG_DEPENDS:=CONFIG_PACKAGE_libloragw
 
