packet-forwarder: use global_config.json from source

--- a/packet-forwarder/Makefile
+++ b/packet-forwarder/Makefile
@@ -51,7 +51,7 @@ define Package/packet-forwarder/install
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/lora_pkt_fwd.init $(1)/etc/init.d/lora_pkt_fwd
 	$(INSTALL_DIR) $(1)/etc
-	$(INSTALL_DATA) ./files/global_conf.json $(1)/etc/global_conf.json
+	$(INSTALL_DATA) $(PKG_BUILD_DIR)/lora_pkt_fwd/global_conf.json $(1)/etc/global_conf.json
 endef
 
 $(eval $(call BuildPackage,packet-forwarder))
